--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
+    "axios-https-proxy-fix": "^0.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.6",
-    "react-window-infinite-loader": "^1.0.5",
+    "react-virtual": "^2.3.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
